Fixed navbar collapse

--- a/app/assets/stylesheets/_cards.scss
+++ b/app/assets/stylesheets/_cards.scss
@@ -1,4 +1,8 @@
 .card {
+  margin: auto;
+}
+
+.card {
   position: relative;
   display: block;
   margin-bottom: .75rem;
